--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="container">
       <div class="inputs">
         <div class="colors colors-c1">
-          <label class="color-label cl1" for="color-1">Color 1</label>
+          <label class="color-label color-label1 cl1" for="color-1"
+            >Color 1</label
+          >
           <input
             type="text"
             placeholder="#ffffff"
@@ -23,7 +25,9 @@
           />
         </div>
         <div class="colors colors-c2">
-          <label class="color-label cl2" for="color-2">Color 2</label>
+          <label class="color-label color-label2 cl2" for="color-2"
+            >Color 2</label
+          >
           <input
             type="text"
             placeholder="#000000"
